# APEX

./: README.md
ros/: apex.sh
ros/apex_playground/: CMakeLists.txt  README.md  package.xml  setup.py
ros/apex_playground/config/: bounds.json  environment.json  ergo.json  experiment.json  learning.json  recorder.json  torso.json
ros/apex_playground/launch/: controllers.launch  services_ergo.launch  services_sim.launch  services_torso.launch  start_hw.launch  start_sim.launch
ros/apex_playground/msg/: Demonstration.msg  ErgoTrajectory.msg  SensorialState.msg  SensorialTrajectory.msg
ros/apex_playground/scripts/: controller.py  ergo.py  (+6 more)
ros/apex_playground_sim/: CMakeLists.txt  README.md  package.xml
ros/apex_playground_sim/launch/: services_sim.launch  start_puppet.launch  start_sim.launch
ros/apex_playground_sim/scripts/: get_clock_factor.py  simulation_puppet.py  spawn_simulations.py
ros/apex_playground_sim/simulation/: README.md  clock_publisher.lua  remoteApiConnections.txt
ros/apex_playground_sim/simulation/models/: apex_playground.ttt
ros/apex_playground_sim/src/nodes/: vrep_recorder.py
ros/nips2017/: CMakeLists.txt  README.md  package.xml  setup.py
scripts/: analyze.py  analyze_AMB.py  analyze_discoveries.py  analyze_explo.py  analyze_explo_gain.py  analyze_touch.py
scripts/analysis/: analyze_AMB.py  analyze_ergo_ball.py  analyze_explo.py  analyze_touch.py  check_explo.py
scripts/other/: download_results.bash
scripts/raspberrypi/: apex.service  apexify.bash  autostart.bash
scripts/workstation_tools/: apex.sh  download_results.bash
(+110 files in other folders)
